# serializer version: 1
# name: TestTransactionsReject.test_created_by_user
  dict({
    'message': 'Transaction status updated',
    'success': True,
  })
# ---
# name: TestTransactionsReject.test_forbidden
  dict({
    'code': 'drf.permission_denied',
    'message': 'At least one verified gadget is required',
    'success': False,
  })
# ---
# name: TestTransactionsReject.test_invalid_status[no_response]
  dict({
    'code': 'api.bad_request',
    'message': 'Transaction can only be accepted or rejected',
    'success': False,
  })
# ---
# name: TestTransactionsReject.test_invalid_status[pending]
  dict({
    'code': 'api.bad_request',
    'message': 'Transaction can only be accepted or rejected',
    'success': False,
  })
# ---
# name: TestTransactionsReject.test_success
  dict({
    'message': 'Transaction status updated',
    'success': True,
  })
# ---
# name: TestTransactionsReject.test_transaction_does_not_exist
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'transaction': list([
        '00000000-0000-0000-0000-000000000000',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestTransactionsReject.test_transaction_not_pending
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'transaction': list([
        '00000000-0000-0000-0000-000000000000',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestTransactionsReject.test_transaction_not_user
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'transaction': list([
        '00000000-0000-0000-0000-000000000000',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestTransactionsReject.test_unauthorized
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
# name: TestTransactionsReject.test_user_deleted
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
